--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: circleci/node:14.5.0-browsers
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
