--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,12 +15,12 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: circleci/node:14.5.0-browsers
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: SelimAbidin/browser-test-action@v1
 
       # Runs a single command using the runners shell
       - name: Install
